--- a/index.html
+++ b/index.html
@@ -12,9 +12,10 @@
     <!-- container containing just the button and audio -->
     <div class="container">
         <button class="joke-btn">Tell Me A Joke</button>
-        <audio class="tell-joke" controls></audio>
+        <audio class="tell-joke" controls hidden></audio>
     </div>
 
+    <!-- Script files -->
     <script src="joke.js"></script>
 </body>
 </html>
