worked on code optimization and README.md updated

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     </div>
 
     <!-- Script files -->
+    <script src="voice.js"></script>
     <script src="joke.js"></script>
 </body>
 </html>
