added joke text display as suggested

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <!-- container containing just the button and audio -->
     <div class="container">
         <button class="joke-btn">Tell Me A Joke</button>
+        <span class="show-joke"></span>
         <audio class="tell-joke" controls hidden></audio>
     </div>
 
